# Aicraft

./: #ifndef ENHANCED_HIGH_PERFORMANCE_TRAINI.c  #ifndef TRAINING_H.c  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AiCraft.sln  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  Untitled-2.c  Untitled-4.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aicraft.vcxproj  aicraft.vcxproj.filters  aicraft_demo.vcxproj  aicraft_demo.vcxproj.filters  build.bat  build_log.txt  build_log2.txt  build_result.txt  cmake_install.cmake  install_manifest.txt  train_demo.vcxproj  train_demo.vcxproj.filters  validate_code.py
Release/: aicraft.lib
aicraft.dir/Debug/: aicraft.lib.recipe
aicraft.dir/Debug/aicraft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  aicraft.lastbuildstate
aicraft.dir/Release/aicraft.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  aicraft.lastbuildstate
aicraft_demo.dir/Debug/: aicraft_demo.exe.recipe  aicraft_demo.ilk
aicraft_demo.dir/Debug/aicraft_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
aicraft_demo.dir/Release/aicraft_demo.tlog/: CL.command.1.tlog  CL.write.1.tlog
install/include/aicraft/: aicraft_advanced.h  training.h
install/lib/: aicraft.lib
src/: advanced_optimizers.c  advanced_training.c  advanced_utils.c  benchmark_suite.c  graph_optimizer.c  main.c  quantization.c  tensor.c  tensor.h  training.c  training.h
src/cuda/: advanced_kernels.cu  cuda_kernels.cu  cuda_utils.cu  tensor_cuda.cu
train_demo.dir/Debug/: train_demo.exe.recipe  train_demo.ilk
train_demo.dir/Debug/train_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
